// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CpsSocialEmbedContainer AMP should render correctly 1`] = `
@media (max-width: 14.9375rem) {
  .emotion-0 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-0 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-0 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-0 {
    margin-left: 20%;
  }
}

@media (min-width: 80rem) {
  .emotion-0 {
    margin-left: 40%;
  }
}

@supports (display: grid) {
  .emotion-0 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(5, 1fr);
      grid-column-end: span 5;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(5, 1fr);
      grid-column-end: span 5;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-0 {
      grid-template-columns: repeat(10, 1fr);
      grid-column-end: span 10;
      grid-column-start: 5;
    }
  }
}

.emotion-2 {
  margin-bottom: 1.5rem;
  max-width: 31.25rem;
  min-height: 14rem;
}

.emotion-4 {
  position: relative;
}

.emotion-6 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.875rem;
  line-height: 1rem;
  background-color: #FFFFFF;
  border: 0.125rem solid #222222;
  display: block;
  left: 0;
  line-height: 1;
  padding: 0.75rem;
  position: absolute;
  -webkit-text-decoration: none;
  text-decoration: none;
  top: 0;
  z-index: 10;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-6 {
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    font-size: 0.8125rem;
  }
}

.emotion-6 span {
  color: #222222;
}

.emotion-6:hover span,
.emotion-6:focus span {
  color: #B80000;
  border-bottom: 2px solid #B80000;
}

.emotion-6:not(:focus):not(:active) {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-8 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <div
    class="emotion-0 emotion-1"
    dir="ltr"
  >
    <div
      class="emotion-2 emotion-3"
      data-e2e="twitter-embed-https://twitter.com/MileyCyrus/status/1237210910835392512"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <a
          class="emotion-6 emotion-7"
          href="#end-of-twitter-content-2"
        >
          <span>
            Skip Twitter content, 2
          </span>
        </a>
        <amp-twitter
          data-tweetid="1237210910835392512"
          height="9"
          layout="responsive"
          width="16"
        />
        <p
          class="emotion-8 emotion-9"
          id="end-of-twitter-content-2"
          tabindex="-1"
        >
          End of Twitter content, 2
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`CpsSocialEmbedContainer Canonical should render and unmount correctly 1`] = `
@media (max-width: 14.9375rem) {
  .emotion-0 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-0 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-0 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-0 {
    margin-left: 20%;
  }
}

@media (min-width: 80rem) {
  .emotion-0 {
    margin-left: 40%;
  }
}

@supports (display: grid) {
  .emotion-0 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(5, 1fr);
      grid-column-end: span 5;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(5, 1fr);
      grid-column-end: span 5;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-0 {
      grid-template-columns: repeat(10, 1fr);
      grid-column-end: span 10;
      grid-column-start: 5;
    }
  }
}

.emotion-2 {
  margin-bottom: 1.5rem;
  max-width: 31.25rem;
  min-height: 14rem;
}

.emotion-4 {
  position: relative;
}

.emotion-6 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.875rem;
  line-height: 1rem;
  background-color: #FFFFFF;
  border: 0.125rem solid #222222;
  display: block;
  left: 0;
  line-height: 1;
  padding: 0.75rem;
  position: absolute;
  -webkit-text-decoration: none;
  text-decoration: none;
  top: 0;
  z-index: 10;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-6 {
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    font-size: 0.8125rem;
  }
}

.emotion-6 span {
  color: #222222;
}

.emotion-6:hover span,
.emotion-6:focus span {
  color: #B80000;
  border-bottom: 2px solid #B80000;
}

.emotion-6:not(:focus):not(:active) {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 .twitter-tweet {
  margin-top: 0!important;
  margin-bottom: 10rem!important;
}

.emotion-8 .twitter-tweet-rendered {
  margin-bottom: 0!important;
}

.emotion-10 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div
  class="emotion-0 emotion-1"
  dir="ltr"
>
  <div
    class="emotion-2 emotion-3"
    data-e2e="twitter-embed-https://twitter.com/MileyCyrus/status/1237210910835392512"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <a
        class="emotion-6 emotion-7"
        href="#end-of-twitter-content-2"
      >
        <span>
          Skip Twitter content, 2
        </span>
      </a>
      <div
        class="emotion-8 emotion-9"
      >
        <blockquote
          class="twitter-tweet"
        >
          <p
            dir="ltr"
            lang="en"
          >
            Australia: Due to the recommendations of local, state, federal and international government authorities, including the Center for Disease Control, to reduce potential health risks in response to the current global health crisis, we are no longer traveling to Aus for the show.
          </p>
          — Miley Ray Cyrus (@MileyCyrus) 
          <a
            href="https://twitter.com/MileyCyrus/status/1237210910835392512?ref_src=twsrc%5Etfw"
          >
            March 10, 2020
          </a>
        </blockquote>
        

      </div>
      <p
        class="emotion-10 emotion-11"
        id="end-of-twitter-content-2"
        tabindex="-1"
      >
        End of Twitter content, 2
      </p>
    </div>
  </div>
</div>
`;

exports[`CpsSocialEmbedContainer Canonical should render correctly without an embed block 1`] = `
@media (max-width: 14.9375rem) {
  .emotion-0 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-0 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-0 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-0 {
    margin-left: 20%;
  }
}

@media (min-width: 80rem) {
  .emotion-0 {
    margin-left: 40%;
  }
}

@supports (display: grid) {
  .emotion-0 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(5, 1fr);
      grid-column-end: span 5;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(5, 1fr);
      grid-column-end: span 5;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-0 {
      grid-template-columns: repeat(10, 1fr);
      grid-column-end: span 10;
      grid-column-start: 5;
    }
  }
}

.emotion-2 {
  margin-bottom: 1.5rem;
  max-width: 31.25rem;
}

.emotion-4 {
  position: relative;
}

.emotion-6 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.875rem;
  line-height: 1rem;
  background-color: #FFFFFF;
  border: 0.125rem solid #222222;
  display: block;
  left: 0;
  line-height: 1;
  padding: 0.75rem;
  position: absolute;
  -webkit-text-decoration: none;
  text-decoration: none;
  top: 0;
  z-index: 10;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-6 {
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    font-size: 0.8125rem;
  }
}

.emotion-6 span {
  color: #222222;
}

.emotion-6:hover span,
.emotion-6:focus span {
  color: #B80000;
  border-bottom: 2px solid #B80000;
}

.emotion-6:not(:focus):not(:active) {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-8 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  border: 0.0625rem solid #AEAEB5;
  border-radius: 0.5rem;
  color: #3F3F42;
  padding: 1rem;
}

@media (min-width: 20rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

.emotion-8 p {
  margin-top: 0;
  margin-bottom: 0.5rem;
}

.emotion-8 a,
.emotion-8 small {
  display: block;
}

.emotion-8 a {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8 a:visited {
  color: #6E6E73;
}

.emotion-8 a:hover,
.emotion-8 a:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-8 small {
  margin-top: 0.5rem;
  font-size: 0.75rem;
  line-height: 1rem;
}

.emotion-10 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <div
    class="emotion-0 emotion-1"
    dir="ltr"
  >
    <div
      class="emotion-2 emotion-3"
      data-e2e="twitter-embed-https://twitter.com/MileyCyrus/status/1237210910835392512"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <a
          class="emotion-6 emotion-7"
          href="#end-of-twitter-content-1"
        >
          <span>
            Skip Twitter content, 1
          </span>
        </a>
        <div
          class="emotion-8 emotion-9"
        >
          <p
            data-testid="social-embed-fallback-title"
          >
            Content is not available
          </p>
          <a
            aria-label="View content on Twitter, external"
            href="https://twitter.com/MileyCyrus/status/1237210910835392512"
          >
            View content on Twitter
          </a>
        </div>
        <p
          class="emotion-10 emotion-11"
          id="end-of-twitter-content-1"
          tabindex="-1"
        >
          End of Twitter content, 1
        </p>
      </div>
    </div>
  </div>
</div>
`;
